# vk-mem-rs

./: .gitmodules  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: demo.rs
src/: definitions.rs  defragmentation.rs  error.rs  ffi.rs  lib.rs  pool.rs  virtual_block.rs
tests/: mod.rs
wrapper/: vma_lib.cpp
wrapper/vulkan/: vulkan.h  vulkan_beta.h  vulkan_core.h
