[package]
name = "vk-mem"
version = "0.2.3"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/gwihlidal/vk-mem-rs"
repository = "https://github.com/gwihlidal/vk-mem-rs"
documentation = "https://docs.rs/vk-mem"
readme = "README.md"
keywords = ["vulkan", "vk", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/vk_platform.h",
    "vendor/Vulkan-Headers/include/vulkan_core.h",
    "vendor/Vulkan-Headers/include/vulkan.h",
    "wrapper/vma_lib.cpp",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/vk-mem-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
ash = ">= 0.35"
bitflags = "1.2.1"

[build-dependencies]
cc = "1.0.50"

[build-dependencies.bindgen]
version = "0.59.1"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
generate_bindings=["bindgen"]
link_vulkan=[]
recording=[]
