[package]
name = "vma"
version = "0.3.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/dust-engine/vk-mem-rs"
repository = "https://github.com/dust-engine/vk-mem-rs"
documentation = "https://docs.rs/vma"
readme = "README.md"
keywords = ["vulkan", "vk", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/vulkan/vk_platform.h",
    "vendor/Vulkan-Headers/include/vulkan/vulkan_core.h",
    "vendor/Vulkan-Headers/include/vk_video/vulkan_video_codec_h265std.h",
    "vendor/Vulkan-Headers/include/vk_video/vulkan_video_codec_h265std_decode.h",
    "vendor/Vulkan-Headers/include/vk_video/vulkan_video_codec_h264std.h",
    "vendor/Vulkan-Headers/include/vk_video/vulkan_video_codec_h264std_decode.h",
    "vendor/Vulkan-Headers/include/vulkan/vulkan.h",
    "wrapper.cpp",
]
edition = "2021"

[badges]
travis-ci = { repository = "dust-engine/vk-mem-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
ash = { version = "0.37", default-features = false }
bitflags = "1.2.1"

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
version = "0.59"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["loaded"]
generate_bindings=["bindgen"]
linked=["ash/linked"]
loaded=["ash/loaded"]
recording=[]
